--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "starter-kit",
+  "name": "@codeyourfuture/tech-products-demo",
   "version": "0.0.1",
-  "description": "Starter kit for full-stack JavaScript projects",
+  "description": " Example app for tech products interview experiment",
   "private": true,
   "scripts": {
     "prebuild": "npm run cleanup",
@@ -14,15 +14,13 @@
     "dev": "concurrently --kill-others \"npm:dev:*\"",
     "dev:client": "webpack serve --config client/webpack/dev.config.js",
     "dev:server": "cross-env LOG_LEVEL=debug PORT=3100 nodemon --inspect server/server.js",
-    "e2e": "concurrently --kill-others --success first --names \"app,e2e\" \"npm:serve\" \"npm:e2e:safe\"",
-    "e2e:dev": "concurrently --kill-others --success first --names \"dev,e2e\" \"npm:dev\" \"npm:e2e:safe\"",
-    "e2e:local": "cypress open",
+    "e2e": "concurrently --kill-others --success first --names \"app,e2e\" \"npm:serve\" \"npm:e2e:run\"",
+    "pree2e:run": "wait-on --log --timeout 60000 http-get://localhost:3000",
     "e2e:run": "cypress run",
-    "e2e:safe": "wait-on --log --timeout 60000 http-get://localhost:3000 && npm run e2e:run",
     "lint": "eslint .",
     "preserve": "npm run build",
     "serve": "npm start",
-    "ship": "npm run lint && npm run test && npm run e2e:dev && npm run e2e",
+    "ship": "npm run lint && npm run test && npm run e2e",
     "start": "node dist/server.js",
     "test": "jest",
     "test:cover": "npm run test -- --coverage",
@@ -30,15 +28,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/textbook/starter-kit.git"
+    "url": "git+https://github.com/CodeYourFuture/tech-products-demo.git"
   },
   "author": "Jonathan Sharpe <mail@jonrshar.pe>",
   "contributors": [],
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/textbook/starter-kit/issues"
+    "url": "https://github.com/CodeYourFuture/tech-products-demo/issues"
   },
-  "homepage": "https://github.com/textbook/starter-kit#readme",
+  "homepage": "https://github.com/CodeYourFuture/tech-products-demo#readme",
   "devDependencies": {
     "@babel/cli": "^7.22.9",
     "@babel/core": "^7.22.9",
@@ -97,7 +95,7 @@
     "winston": "^3.10.0"
   },
   "engines": {
-    "node": "^16.17 || ^18.3 || ^20",
-    "npm": ">=8"
+    "node": "^18",
+    "npm": "^9"
   }
 }
