--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -11,6 +11,15 @@ on:
 jobs:
   build:
     runs-on: ubuntu-22.04
+    services:
+      db:
+        image: postgres:15
+        env:
+          POSTGRES_DB: test-db
+          POSTGRES_PASSWORD: opensesame
+          POSTGRES_USER: admin
+        ports:
+          - '5432:5432'
     steps:
     - uses: actions/checkout@v3
     - run: echo "NODE_VERSION=$(cat .nvmrc)" >> $GITHUB_OUTPUT
@@ -23,8 +32,11 @@ jobs:
     - run: npm run lint
     - run: npm run test
       env:
+        DATABASE_URL: postgres://admin:opensesame@localhost:5432/test-db
         FORCE_COLOR: true
     - run: npm run e2e
+      env:
+        DATABASE_URL: postgres://admin:opensesame@localhost:5432/test-db
   deploy:
     uses: './.github/workflows/deploy.yml'
     if: github.ref == 'refs/heads/main'
