--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,35 +1,28 @@
 {
-  "env": {
-    "es6": true,
-    "node": true
-  },
-  "extends": [
-    "@codeyourfuture/standard"
-  ],
-  "overrides": [
-    {
-      "files": [
-        "setupTests.js",
-        "**/*.test.js"
-      ],
-      "extends": [
-        "plugin:jest/recommended"
-      ],
-      "rules": {
-        "jest/expect-expect": [
-          "error",
-          {
-            "assertFunctionNames": [
-              "cy.**.should",
-              "cy.checkA11y",
-              "expect",
-              "request.**.expect"
-            ]
-          }
-        ]
-      }
-    }
-  ],
-  "parser": "@babel/eslint-parser",
-  "root": true
+	"env": {
+		"es6": true,
+		"node": true
+	},
+	"extends": ["@codeyourfuture/standard"],
+	"overrides": [
+		{
+			"files": ["setupTests.js", "**/*.test.js"],
+			"extends": ["plugin:jest/recommended"],
+			"rules": {
+				"jest/expect-expect": [
+					"error",
+					{
+						"assertFunctionNames": [
+							"cy.**.should",
+							"cy.checkA11y",
+							"expect",
+							"request.**.expect"
+						]
+					}
+				]
+			}
+		}
+	],
+	"parser": "@babel/eslint-parser",
+	"root": true
 }
