--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -3,10 +3,10 @@ name: Node.js CI
 on:
   push:
     branches:
-    - '*'
+      - "*"
   pull_request:
     branches:
-    - main
+      - main
 
 jobs:
   build:
@@ -19,26 +19,26 @@ jobs:
           POSTGRES_PASSWORD: opensesame
           POSTGRES_USER: admin
         ports:
-          - '5432:5432'
+          - "5432:5432"
     steps:
-    - uses: actions/checkout@v3
-    - run: echo "NODE_VERSION=$(cat .nvmrc)" >> $GITHUB_OUTPUT
-      id: nvmrc
-    - uses: actions/setup-node@v3
-      with:
-        cache: 'npm'
-        node-version-file: '.nvmrc'
-    - run: npm ci
-    - run: npm run lint
-    - run: npm run test
-      env:
-        DATABASE_URL: postgres://admin:opensesame@localhost:5432/test-db
-        FORCE_COLOR: true
-    - run: npm run e2e
-      env:
-        DATABASE_URL: postgres://admin:opensesame@localhost:5432/test-db
+      - uses: actions/checkout@v3
+      - run: echo "NODE_VERSION=$(cat .nvmrc)" >> $GITHUB_OUTPUT
+        id: nvmrc
+      - uses: actions/setup-node@v3
+        with:
+          cache: "npm"
+          node-version-file: ".nvmrc"
+      - run: npm ci
+      - run: npm run lint
+      - run: npm run test
+        env:
+          DATABASE_URL: postgres://admin:opensesame@localhost:5432/test-db
+          FORCE_COLOR: true
+      - run: npm run e2e
+        env:
+          DATABASE_URL: postgres://admin:opensesame@localhost:5432/test-db
   deploy:
-    uses: './.github/workflows/deploy.yml'
+    uses: "./.github/workflows/deploy.yml"
     if: github.ref == 'refs/heads/main'
     needs: build
     with:
