--- a/e2e/.eslintrc.json
+++ b/e2e/.eslintrc.json
@@ -1,11 +1,9 @@
 {
-  "env": {
-    "cypress/globals": true
-  },
-  "parserOptions": {
-    "ecmaVersion": 6
-  },
-  "plugins": [
-    "cypress"
-  ]
+	"env": {
+		"cypress/globals": true
+	},
+	"parserOptions": {
+		"ecmaVersion": 6
+	},
+	"plugins": ["cypress"]
 }
