--- a/package.json
+++ b/package.json
@@ -1,102 +1,106 @@
 {
-  "name": "@codeyourfuture/tech-products-demo",
-  "version": "0.0.1",
-  "description": " Example app for tech products interview experiment",
-  "private": true,
-  "scripts": {
-    "prebuild": "npm run cleanup",
-    "build": "npm run build:server && npm run build:client",
-    "postbuild": "buildinfo --output dist/static/build-info.txt",
-    "build:client": "webpack --config client/webpack/prod.config.js",
-    "build:server": "babel server --copy-files --out-dir dist",
-    "postbuild:server": "del-cli ./dist/static ./dist/**/README.md ./dist/**/*.test.js",
-    "cleanup": "del-cli ./dist/*",
-    "dev": "concurrently --kill-others \"npm:dev:*\"",
-    "dev:client": "webpack serve --config client/webpack/dev.config.js",
-    "dev:server": "cross-env LOG_LEVEL=debug PORT=4202 nodemon --inspect server/server.js",
-    "e2e": "concurrently --kill-others --success first --names \"app,e2e\" \"npm:serve\" \"npm:e2e:run\"",
-    "pree2e:run": "wait-on --log --timeout 60000 http-get://localhost:4201",
-    "e2e:run": "cypress run",
-    "lint": "eslint .",
-    "preserve": "npm run build",
-    "serve": "npm start",
-    "ship": "npm run lint && npm run test && npm run e2e",
-    "start": "node dist/server.js",
-    "test": "jest",
-    "test:cover": "npm run test -- --coverage",
-    "test:watch": "npm run test -- --watch"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/CodeYourFuture/tech-products-demo.git"
-  },
-  "author": "Jonathan Sharpe <mail@jonrshar.pe>",
-  "contributors": [],
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/CodeYourFuture/tech-products-demo/issues"
-  },
-  "homepage": "https://github.com/CodeYourFuture/tech-products-demo#readme",
-  "devDependencies": {
-    "@babel/cli": "^7.22.9",
-    "@babel/core": "^7.22.9",
-    "@babel/eslint-parser": "^7.22.9",
-    "@babel/node": "^7.22.6",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-transform-runtime": "^7.22.9",
-    "@babel/preset-env": "^7.22.9",
-    "@babel/preset-react": "^7.22.5",
-    "@codeyourfuture/eslint-config-standard": "^4.0.3",
-    "@testing-library/cypress": "^9.0.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@textbook/build-info": "^0.5.3",
-    "axe-core": "^4.7.2",
-    "babel-loader": "^9.1.3",
-    "concurrently": "^8.2.0",
-    "cross-env": "^7.0.3",
-    "css-loader": "^6.8.1",
-    "cypress": "^12.17.1",
-    "cypress-axe": "^1.4.0",
-    "del-cli": "^5.0.0",
-    "eslint": "^8.45.0",
-    "eslint-plugin-cypress": "^2.13.3",
-    "eslint-plugin-jest": "^27.2.3",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "file-loader": "^6.2.0",
-    "history": "^5.3.0",
-    "html-webpack-plugin": "^5.5.3",
-    "html-webpack-tags-plugin": "^3.0.2",
-    "jest": "^29.6.1",
-    "jest-environment-jsdom": "^29.6.1",
-    "msw": "^1.2.2",
-    "nodemon": "^3.0.1",
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1",
-    "style-loader": "^3.3.3",
-    "supertest": "^6.3.3",
-    "wait-on": "^7.0.1",
-    "webpack": "^5.88.1",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1",
-    "webpack-merge": "^5.9.0",
-    "whatwg-fetch": "^3.6.2"
-  },
-  "dependencies": {
-    "@babel/runtime": "^7.22.6",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "helmet": "^7.0.0",
-    "morgan": "^1.10.0",
-    "pg": "^8.11.1",
-    "winston": "^3.10.0"
-  },
-  "engines": {
-    "node": "^18",
-    "npm": "^9"
-  }
+	"name": "@codeyourfuture/tech-products-demo",
+	"version": "0.0.1",
+	"description": " Example app for tech products interview experiment",
+	"private": true,
+	"scripts": {
+		"prebuild": "npm run cleanup",
+		"build": "npm run build:server && npm run build:client",
+		"postbuild": "buildinfo --output dist/static/build-info.txt",
+		"build:client": "webpack --config client/webpack/prod.config.js",
+		"build:server": "babel server --copy-files --out-dir dist",
+		"postbuild:server": "del-cli ./dist/static ./dist/**/README.md ./dist/**/*.test.js",
+		"cleanup": "del-cli ./dist/*",
+		"dev": "concurrently --kill-others \"npm:dev:*\"",
+		"dev:client": "webpack serve --config client/webpack/dev.config.js",
+		"dev:server": "cross-env LOG_LEVEL=debug PORT=4202 nodemon --inspect server/server.js",
+		"e2e": "concurrently --kill-others --success first --names \"app,e2e\" \"npm:serve\" \"npm:e2e:run\"",
+		"pree2e:run": "wait-on --log --timeout 60000 http-get://localhost:4201",
+		"e2e:run": "cypress run",
+		"lint": "npm run lint:eslint && npm run lint:prettier -- --check",
+		"lint:eslint": "eslint .",
+		"lint:fix": "npm run lint:eslint -- --fix && npm run lint:prettier -- --write",
+		"lint:prettier": "prettier .",
+		"preserve": "npm run build",
+		"serve": "npm start",
+		"ship": "npm run lint && npm run test && npm run e2e",
+		"start": "node dist/server.js",
+		"test": "jest",
+		"test:cover": "npm run test -- --coverage",
+		"test:watch": "npm run test -- --watch"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/CodeYourFuture/tech-products-demo.git"
+	},
+	"author": "Jonathan Sharpe <mail@jonrshar.pe>",
+	"contributors": [],
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/CodeYourFuture/tech-products-demo/issues"
+	},
+	"homepage": "https://github.com/CodeYourFuture/tech-products-demo#readme",
+	"devDependencies": {
+		"@babel/cli": "^7.22.9",
+		"@babel/core": "^7.22.9",
+		"@babel/eslint-parser": "^7.22.9",
+		"@babel/node": "^7.22.6",
+		"@babel/plugin-proposal-class-properties": "^7.18.6",
+		"@babel/plugin-transform-runtime": "^7.22.9",
+		"@babel/preset-env": "^7.22.9",
+		"@babel/preset-react": "^7.22.5",
+		"@codeyourfuture/eslint-config-standard": "^4.0.3",
+		"@testing-library/cypress": "^9.0.0",
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/react": "^14.0.0",
+		"@textbook/build-info": "^0.5.3",
+		"axe-core": "^4.7.2",
+		"babel-loader": "^9.1.3",
+		"concurrently": "^8.2.0",
+		"cross-env": "^7.0.3",
+		"css-loader": "^6.8.1",
+		"cypress": "^12.17.1",
+		"cypress-axe": "^1.4.0",
+		"del-cli": "^5.0.0",
+		"eslint": "^8.45.0",
+		"eslint-plugin-cypress": "^2.13.3",
+		"eslint-plugin-jest": "^27.2.3",
+		"eslint-plugin-jsx-a11y": "^6.7.1",
+		"eslint-plugin-react": "^7.32.2",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"file-loader": "^6.2.0",
+		"history": "^5.3.0",
+		"html-webpack-plugin": "^5.5.3",
+		"html-webpack-tags-plugin": "^3.0.2",
+		"jest": "^29.6.1",
+		"jest-environment-jsdom": "^29.6.1",
+		"msw": "^1.2.2",
+		"nodemon": "^3.0.1",
+		"prettier": "^3.0.0",
+		"prop-types": "^15.8.1",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.14.1",
+		"style-loader": "^3.3.3",
+		"supertest": "^6.3.3",
+		"wait-on": "^7.0.1",
+		"webpack": "^5.88.1",
+		"webpack-cli": "^5.1.4",
+		"webpack-dev-server": "^4.15.1",
+		"webpack-merge": "^5.9.0",
+		"whatwg-fetch": "^3.6.2"
+	},
+	"dependencies": {
+		"@babel/runtime": "^7.22.6",
+		"dotenv": "^16.3.1",
+		"express": "^4.18.2",
+		"helmet": "^7.0.0",
+		"morgan": "^1.10.0",
+		"pg": "^8.11.1",
+		"winston": "^3.10.0"
+	},
+	"engines": {
+		"node": "^18",
+		"npm": "^9"
+	}
 }
