--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
 		"lint:eslint": "eslint .",
 		"lint:fix": "npm run lint:eslint -- --fix && npm run lint:prettier -- --write",
 		"lint:prettier": "prettier .",
+		"migration": "node-pg-migrate --config-file migration-config.json",
 		"preserve": "npm run build",
 		"serve": "npm start",
 		"ship": "npm run lint && npm run test && npm run e2e",
+		"prestart": "npm run migration -- up",
 		"start": "node dist/server.js",
 		"test": "jest",
 		"test:cover": "npm run test -- --coverage",
@@ -96,6 +98,7 @@
 		"express": "^4.18.2",
 		"helmet": "^7.0.0",
 		"morgan": "^1.10.0",
+		"node-pg-migrate": "^6.2.2",
 		"pg": "^8.11.1",
 		"winston": "^3.10.0"
 	},
