Include DB URL for migrations

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -31,6 +31,8 @@ jobs:
       - run: npm ci
       - run: npm run lint
       - run: npm run migration -- up
+        env:
+          DATABASE_URL: postgres://admin:opensesame@localhost:5432/test-db
       - run: npm run test
         env:
           DATABASE_URL: postgres://admin:opensesame@localhost:5432/test-db
