--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
 		"del-cli": "^5.0.0",
 		"eslint": "^8.45.0",
 		"eslint-plugin-cypress": "^2.13.3",
+		"eslint-plugin-import": "^2.27.5",
 		"eslint-plugin-jest": "^27.2.3",
 		"eslint-plugin-jsx-a11y": "^6.7.1",
 		"eslint-plugin-react": "^7.32.2",
