--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"@testing-library/cypress": "^9.0.0",
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/react": "^14.0.0",
+		"@testing-library/user-event": "^14.4.3",
 		"@textbook/build-info": "^0.5.3",
 		"axe-core": "^4.7.2",
 		"babel-loader": "^9.1.3",
@@ -102,6 +103,11 @@
 		"node-pg-migrate": "^6.2.2",
 		"pg": "^8.11.1",
 		"winston": "^3.10.0"
+	},
+	"overrides": {
+		"@testing-library/user-event": {
+			"@testing-library/dom": "^9"
+		}
 	},
 	"engines": {
 		"node": "^18",
