--- a/package.json
+++ b/package.json
@@ -85,6 +85,8 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.14.2",
+		"sass": "^1.64.1",
+		"sass-loader": "^13.3.2",
 		"style-loader": "^3.3.3",
 		"supertest": "^6.3.3",
 		"wait-on": "^7.0.1",
