--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 DATABASE_URL=postgres://postgres:@localhost:4211/postgres
 LOG_LEVEL=debug
 SUDO_TOKEN=secretsquirrel
+
+CYPRESS_SUDO_TOKEN=$SUDO_TOKEN
