--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
 	"dependencies": {
 		"@babel/runtime": "^7.22.6",
 		"dotenv": "^16.3.1",
+		"dotenv-expand": "^10.0.0",
 		"express": "^4.18.2",
 		"helmet": "^7.0.0",
 		"morgan": "^1.10.0",
