Have to set CYPRESS_ vars explicitly

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -40,6 +40,7 @@ jobs:
           SUDO_TOKEN: opensesame
       - run: npm run e2e
         env:
+          CYPRESS_SUDO_TOKEN: opensesame
           CYPRESS_VIDEO: true
           DATABASE_URL: postgres://admin:opensesame@localhost:5432/test-db
           SUDO_TOKEN: opensesame
