--- a/package.json
+++ b/package.json
@@ -112,6 +112,8 @@
 		"morgan": "^1.10.0",
 		"node-pg-migrate": "^6.2.2",
 		"pg": "^8.11.1",
+		"swagger-jsdoc": "^6.2.8",
+		"swagger-ui-express": "^5.0.0",
 		"winston": "^3.10.0"
 	},
 	"overrides": {
