--- a/package.json
+++ b/package.json
@@ -6,15 +6,13 @@
 	"scripts": {
 		"build": "npm run build:server && npm run build:client",
 		"postbuild": "buildinfo --output dist/static/build-info.txt",
-		"build:client": "webpack --config client/webpack/prod.config.js",
-		"build:server": "babel server --copy-files --delete-dir-on-start --ignore \"**/*.test.js,**/setupTests.js\" --no-copy-ignored --out-dir dist",
-		"postbuild:server": "del-cli ./dist/static ./dist/**/README.md",
+		"build:client": "npm --workspace client run build",
+		"build:server": "npm --workspace server run build",
 		"dev": "concurrently --kill-others \"npm:dev:*\"",
-		"dev:client": "webpack serve --config client/webpack/dev.config.js",
-		"dev:server": "cross-env LOG_LEVEL=debug PORT=4202 nodemon --inspect server/server.js",
+		"dev:client": "npm --workspace client run dev",
+		"dev:server": "npm --workspace server run dev",
 		"e2e": "concurrently --kill-others --success first --names \"app,e2e\" \"npm:serve\" \"npm:e2e:run\"",
-		"pree2e:run": "wait-on --log --timeout 60000 http-get://localhost:4201",
-		"e2e:run": "cypress run",
+		"e2e:run": "npm --workspace e2e run e2e",
 		"lint": "npm run lint:eslint && npm run lint:prettier -- --check",
 		"lint:eslint": "eslint .",
 		"lint:fix": "npm run lint:eslint -- --fix && npm run lint:prettier -- --write",
@@ -26,9 +24,8 @@
 		"ship": "npm run lint && npm run test && npm run e2e",
 		"prestart": "node bin/run-migrations.js",
 		"start": "node dist/server.js",
-		"test": "jest",
-		"test:cover": "npm run test -- --coverage",
-		"test:watch": "npm run test -- --watch"
+		"test": "npm --workspaces --if-present run test",
+		"test:cover": "npm run test -- -- --coverage"
 	},
 	"lint-staged": {
 		"*.{js,jsx}": "eslint --fix",
@@ -49,78 +46,31 @@
 		"@babel/cli": "^7.22.9",
 		"@babel/core": "^7.22.9",
 		"@babel/eslint-parser": "^7.22.9",
-		"@babel/node": "^7.22.6",
 		"@babel/plugin-proposal-class-properties": "^7.18.6",
 		"@babel/plugin-transform-runtime": "^7.22.9",
 		"@babel/preset-env": "^7.22.9",
-		"@babel/preset-react": "^7.22.5",
 		"@codeyourfuture/eslint-config-standard": "^4.0.3",
-		"@testing-library/cypress": "^9.0.0",
-		"@testing-library/jest-dom": "^5.17.0",
-		"@testing-library/react": "^14.0.0",
-		"@testing-library/user-event": "^14.4.3",
 		"@textbook/build-info": "^0.5.3",
-		"axe-core": "^4.7.2",
-		"babel-loader": "^9.1.3",
 		"concurrently": "^8.2.0",
 		"cross-env": "^7.0.3",
-		"css-loader": "^6.8.1",
-		"cypress": "^12.17.2",
-		"cypress-axe": "^1.4.0",
 		"del-cli": "^5.0.0",
 		"eslint": "^8.45.0",
-		"eslint-plugin-cypress": "^2.13.3",
 		"eslint-plugin-import": "^2.27.5",
 		"eslint-plugin-jest": "^27.2.3",
-		"eslint-plugin-jsx-a11y": "^6.7.1",
-		"eslint-plugin-react": "^7.33.0",
-		"eslint-plugin-react-hooks": "^4.6.0",
-		"file-loader": "^6.2.0",
-		"history": "^5.3.0",
-		"html-webpack-plugin": "^5.5.3",
-		"html-webpack-tags-plugin": "^3.0.2",
 		"husky": "^8.0.3",
 		"jest": "^29.6.1",
-		"jest-environment-jsdom": "^29.6.1",
 		"lint-staged": "^13.2.3",
 		"msw": "^1.2.3",
-		"nodemon": "^3.0.1",
 		"prettier": "^3.0.0",
-		"prop-types": "^15.8.1",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-router-dom": "^6.14.2",
-		"sass": "^1.64.1",
-		"sass-loader": "^13.3.2",
-		"style-loader": "^3.3.3",
-		"supertest": "^6.3.3",
-		"wait-on": "^7.0.1",
-		"webpack": "^5.88.2",
-		"webpack-cli": "^5.1.4",
-		"webpack-dev-server": "^4.15.1",
-		"webpack-merge": "^5.9.0",
-		"whatwg-fetch": "^3.6.17"
-	},
-	"dependencies": {
-		"@babel/runtime": "^7.22.6",
-		"dotenv": "^16.3.1",
-		"dotenv-expand": "^10.0.0",
-		"express": "^4.18.2",
-		"helmet": "^7.0.0",
-		"morgan": "^1.10.0",
-		"node-pg-migrate": "^6.2.2",
-		"pg": "^8.11.1",
-		"swagger-jsdoc": "^6.2.8",
-		"swagger-ui-express": "^5.0.0",
-		"winston": "^3.10.0"
-	},
-	"overrides": {
-		"@testing-library/user-event": {
-			"@testing-library/dom": "^9"
-		}
+		"wait-on": "^7.0.1"
 	},
 	"engines": {
 		"node": "^18",
 		"npm": "^9"
-	}
+	},
+	"workspaces": [
+		"client",
+		"e2e",
+		"server"
+	]
 }
