--- a/package.json
+++ b/package.json
@@ -4,13 +4,11 @@
 	"description": " Example app for tech products interview experiment",
 	"private": true,
 	"scripts": {
-		"prebuild": "npm run cleanup",
 		"build": "npm run build:server && npm run build:client",
 		"postbuild": "buildinfo --output dist/static/build-info.txt",
 		"build:client": "webpack --config client/webpack/prod.config.js",
-		"build:server": "babel server --copy-files --out-dir dist",
-		"postbuild:server": "del-cli ./dist/static ./dist/**/README.md ./dist/**/*.test.js",
-		"cleanup": "del-cli ./dist/*",
+		"build:server": "babel server --copy-files --delete-dir-on-start --ignore \"**/*.test.js,**/setupTests.js\" --no-copy-ignored --out-dir dist",
+		"postbuild:server": "del-cli ./dist/static ./dist/**/README.md",
 		"dev": "concurrently --kill-others \"npm:dev:*\"",
 		"dev:client": "webpack serve --config client/webpack/dev.config.js",
 		"dev:server": "cross-env LOG_LEVEL=debug PORT=4202 nodemon --inspect server/server.js",
