Cut down number of scripts

--- a/package.json
+++ b/package.json
@@ -4,15 +4,10 @@
 	"description": " Example app for tech products interview experiment",
 	"private": true,
 	"scripts": {
-		"build": "npm run build:server && npm run build:client",
+		"build": "npm --workspace server run build && npm --workspace client run build",
 		"postbuild": "buildinfo --output dist/static/build-info.txt",
-		"build:client": "npm --workspace client run build",
-		"build:server": "npm --workspace server run build",
-		"dev": "concurrently --kill-others \"npm:dev:*\"",
-		"dev:client": "npm --workspace client run dev",
-		"dev:server": "npm --workspace server run dev",
-		"e2e": "concurrently --kill-others --success first --names \"app,e2e\" \"npm:serve\" \"npm:e2e:run\"",
-		"e2e:run": "npm --workspace e2e run e2e",
+		"dev": "concurrently --kill-others --names \"client,server\" \"npm --workspace client run dev\" \"npm --workspace server run dev\"",
+		"e2e": "concurrently --kill-others --success first --names \"app,e2e\" \"npm:serve\" \"npm --workspace e2e run e2e\"",
 		"lint": "npm run lint:eslint && npm run lint:prettier -- --check",
 		"lint:eslint": "eslint .",
 		"lint:fix": "npm run lint:eslint -- --fix && npm run lint:prettier -- --write",
