Move some config out of root directory

--- a/package.json
+++ b/package.json
@@ -11,28 +11,28 @@
 		"postbuild:server": "del-cli ./dist/static ./dist/**/README.md",
 		"dev": "concurrently --kill-others \"npm:dev:*\"",
 		"dev:client": "webpack serve --config client/webpack/dev.config.js",
-		"dev:server": "cross-env LOG_LEVEL=debug PORT=4202 nodemon --inspect server/server.js",
+		"dev:server": "cross-env LOG_LEVEL=debug PORT=4202 nodemon --config .config/nodemon.json --inspect server/server.js",
 		"e2e": "concurrently --kill-others --success first --names \"app,e2e\" \"npm:serve\" \"npm:e2e:run\"",
 		"pree2e:run": "wait-on --log --timeout 60000 http-get://localhost:4201",
 		"e2e:run": "cypress run",
-		"lint": "npm run lint:eslint && npm run lint:prettier -- --check",
-		"lint:eslint": "eslint .",
-		"lint:fix": "npm run lint:eslint -- --fix && npm run lint:prettier -- --write",
-		"lint:prettier": "prettier .",
-		"migration": "node-pg-migrate --config-file migration-config.json",
+		"lint": "npm run lint:eslint . && npm run lint:prettier -- --check .",
+		"lint:eslint": "eslint --config .config/.eslintrc.json --ignore-path .config/.lintignore",
+		"lint:fix": "npm run lint:eslint -- --fix . && npm run lint:prettier -- --write .",
+		"lint:prettier": "prettier --config .config/.prettierrc --ignore-path .config/.lintignore --ignore-unknown",
+		"migration": "node-pg-migrate --config-file .config/migrations.json",
 		"prepare": "husky install || echo 'No Husky 🐶'",
 		"preserve": "npm run build",
 		"serve": "npm start",
 		"ship": "npm run lint && npm run test && npm run e2e",
 		"prestart": "node bin/run-migrations.js",
 		"start": "node dist/server.js",
-		"test": "jest",
+		"test": "jest --config .config/jest.config.js",
 		"test:cover": "npm run test -- --coverage",
 		"test:watch": "npm run test -- --watch"
 	},
 	"lint-staged": {
-		"*.{js,jsx}": "eslint --fix",
-		"*": "prettier --ignore-unknown --write"
+		"*.{js,jsx}": "npm run lint:eslint -- --fix",
+		"*": "npm run lint:prettier -- --write"
 	},
 	"repository": {
 		"type": "git",
