--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -4,18 +4,18 @@ version: "3.8"
 services:
   app:
     build:
-      context: .
+      context: ..
       dockerfile: .devcontainer/Dockerfile
     command: sleep infinity
-    env_file: .env.example
+    env_file: ../.env.example
     environment:
       DATABASE_URL: postgres://postgres:@db:5432/postgres?sslmode=disable
     network_mode: service:db
     volumes:
-      - ..:/workspaces:cached
+      - ../..:/workspaces:cached
   db:
     extends:
-      file: "./docker-compose.yml"
+      file: "../docker-compose.yml"
       service: db
     restart: unless-stopped
     volumes:
