--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
 		"morgan": "^1.10.0",
 		"node-pg-migrate": "^6.2.2",
 		"pg": "^8.11.1",
+		"pg-format": "^1.0.4",
 		"swagger-jsdoc": "^6.2.8",
 		"swagger-ui-express": "^5.0.0",
 		"winston": "^3.10.0"
