--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
 		"prepare": "husky install || echo 'No Husky 🐶'",
 		"preserve": "npm run build",
 		"serve": "npm start",
+		"services:start": "docker compose up --build --detach",
+		"services:stop": "docker compose down",
 		"ship": "npm run lint && npm run test && npm run e2e",
 		"prestart": "node bin/run-migrations.js",
 		"start": "node dist/server.js",
-		"test": "jest --config .config/jest.config.js",
+		"test": "cross-env LOG_LEVEL=info jest --config .config/jest.config.js",
 		"test:cover": "npm run test -- --coverage",
 		"test:watch": "npm run test -- --watch"
 	},
@@ -103,12 +105,16 @@
 	},
 	"dependencies": {
 		"@babel/runtime": "^7.22.6",
+		"connect-pg-simple": "^9.0.0",
 		"dotenv": "^16.3.1",
 		"dotenv-expand": "^10.0.0",
 		"express": "^4.18.2",
+		"express-session": "^1.17.3",
 		"helmet": "^7.0.0",
 		"morgan": "^1.10.0",
 		"node-pg-migrate": "^6.2.2",
+		"passport": "^0.6.0",
+		"passport-github2": "^0.1.12",
 		"pg": "^8.11.1",
 		"pg-format": "^1.0.4",
 		"swagger-jsdoc": "^6.2.8",
