--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -19,6 +19,9 @@ services:
     restart: unless-stopped
     volumes:
       - postgres-data:/var/lib/postgresql/data
-
+  gh:
+    extends:
+      file: "../docker-compose.yml"
+      service: gh
 volumes:
   postgres-data:
