--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -11,15 +11,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-22.04
-    services:
-      db:
-        image: postgres:15
-        env:
-          POSTGRES_DB: test-db
-          POSTGRES_PASSWORD: opensesame
-          POSTGRES_USER: admin
-        ports:
-          - "5432:5432"
     steps:
       - uses: actions/checkout@v3
       - run: echo "NODE_VERSION=$(cat .nvmrc)" >> $GITHUB_OUTPUT
@@ -28,22 +19,17 @@ jobs:
         with:
           cache: "npm"
           node-version-file: ".nvmrc"
+      - run: cp .env.example .env
+      - run: npm run services:start
+      - run: npm run migration -- up
       - run: npm ci
       - run: npm run lint
-      - run: npm run migration -- up
-        env:
-          DATABASE_URL: postgres://admin:opensesame@localhost:5432/test-db
       - run: npm run test -- --coverage
         env:
-          DATABASE_URL: postgres://admin:opensesame@localhost:5432/test-db
           FORCE_COLOR: true
-          SUDO_TOKEN: opensesame
       - run: npm run e2e
         env:
-          CYPRESS_SUDO_TOKEN: opensesame
           CYPRESS_VIDEO: true
-          DATABASE_URL: postgres://admin:opensesame@localhost:5432/test-db
-          SUDO_TOKEN: opensesame
       - uses: actions/upload-artifact@v3
         if: ${{ always() }}
         with:
