--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 DATABASE_URL=postgres://postgres:@localhost:4211/postgres
 LOG_LEVEL=debug
-GITHUB_API_URL=http://localhost:4212/api
+GH_API_BASE_URL=http://localhost:4212/api
 OAUTH_BASE_URL=http://localhost:4212/login/oauth
 OAUTH_CALLBACK_URL=http://localhost:4201/api/auth/callback
 OAUTH_CLIENT_ID=fake-client-id
