Tolerate users without public emails

--- a/.config/.eslintrc.json
+++ b/.config/.eslintrc.json
@@ -4,6 +4,7 @@
 		"node": true
 	},
 	"extends": ["@codeyourfuture/standard"],
+	"ignorePatterns": ["*.d.ts"],
 	"overrides": [
 		{
 			"files": ["setupTests.js", "**/*.test.js"],
