--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,5 @@ OAUTH_CLIENT_SECRET=fake-client-secret
 SESSION_SECRET=abc123
 SUDO_TOKEN=secretsquirrel
 
+CYPRESS_OAUTH_URL=${OAUTH_AUTHORIZE_ENDPOINT:-$OAUTH_BASE_URL}
 CYPRESS_SUDO_TOKEN=$SUDO_TOKEN
