--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 		"ship": "npm run lint && npm run test && npm run e2e",
 		"prestart": "node bin/run-migrations.js",
 		"start": "node dist/server.js",
-		"test": "jest --config .config/jest.config.js --runInBand --verbose",
+		"test": "jest --config .config/jest.config.js",
 		"test:cover": "npm run test -- --coverage",
 		"test:watch": "npm run test -- --watch"
 	},
