--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -78,10 +78,13 @@ jobs:
       contents: write
     runs-on: ubuntu-22.04
     steps:
+      - name: Check out source code
+        uses: actions/checkout@v3
       - name: Download coverage report
         uses: actions/download-artifact@v3
         with:
           name: coverage-report
+          path: reports/coverage/
       - name: Publish coverage report
         uses: JamesIves/github-pages-deploy-action@v4
         with:
