--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
 		"dotenv-expand": "^10.0.0",
 		"express": "^4.18.2",
 		"express-session": "^1.17.3",
+		"express-validation": "^4.1.0",
 		"helmet": "^7.0.0",
 		"morgan": "^1.10.0",
 		"node-pg-migrate": "^6.2.2",
