Update linting rules
- More specific import order
- Move most config to .config/.eslintrc.json
- Add Testing Library plugin
- No console (almost) everywhere

--- a/.config/.eslintrc.json
+++ b/.config/.eslintrc.json
@@ -20,7 +20,25 @@
 							"request.**.expect"
 						]
 					}
-				]
+				],
+				"jest/no-commented-out-tests": "error",
+				"jest/no-disabled-tests": "error"
+			}
+		},
+		{
+			"files": ["cypress.config.js", "e2e/**/*.js"],
+			"extends": ["plugin:cypress/recommended", "plugin:testing-library/dom"],
+			"rules": {
+				"testing-library/await-async-query": "off",
+				"testing-library/await-async-utils": "off",
+				"testing-library/prefer-screen-queries": "off",
+				"no-console": "off"
+			}
+		},
+		{
+			"files": ["bin/*.js"],
+			"rules": {
+				"no-console": "off"
 			}
 		}
 	],
@@ -28,9 +46,16 @@
 	"plugins": ["import"],
 	"root": true,
 	"rules": {
-		"import/order": ["error", { "newlines-between": "always" }],
+		"import/order": [
+			"error",
+			{
+				"alphabetize": { "caseInsensitive": true, "order": "asc" },
+				"newlines-between": "always"
+			}
+		],
 		"object-shorthand": "error",
 		"operator-linebreak": "off",
+		"no-console": "error",
 		"no-warning-comments": "warn"
 	}
 }
