--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
 		"eslint-plugin-jsx-a11y": "^6.7.1",
 		"eslint-plugin-react": "^7.33.1",
 		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-testing-library": "^5.11.0",
 		"file-loader": "^6.2.0",
 		"history": "^5.3.0",
 		"html-webpack-plugin": "^5.5.3",
