Reject duplicate resources with useful feedback

--- a/.config/.eslintrc.json
+++ b/.config/.eslintrc.json
@@ -17,7 +17,8 @@
 						"assertFunctionNames": [
 							"expect",
 							"agent.**.expect",
-							"request.**.expect"
+							"request.**.expect",
+							"screen.findBy*"
 						]
 					}
 				],
