--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
 		"@textbook/build-info": "^0.5.3",
 		"axe-core": "^4.7.2",
 		"babel-loader": "^9.1.3",
+		"clsx": "^2.0.0",
 		"concurrently": "^8.2.0",
 		"cross-env": "^7.0.3",
 		"css-loader": "^6.8.1",
