--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
 		"@testing-library/react": "^14.0.0",
 		"@testing-library/user-event": "^14.4.3",
 		"@textbook/build-info": "^0.5.3",
+		"@types/supertest": "^2.0.12",
 		"axe-core": "^4.7.2",
 		"babel-loader": "^9.1.3",
 		"clsx": "^2.0.0",
