--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 		"serve": "npm start",
 		"services:start": "docker compose up --build --detach",
 		"services:stop": "docker compose down --remove-orphans",
-		"ship": "npm run lint && npm run test && npm run e2e",
+		"ship": "npm run lint && npm run test:cover && npm run e2e",
 		"prestart": "node bin/run-migrations.js",
 		"start": "node dist/server.js",
 		"test": "jest --config .config/jest.config.js --runInBand",
