--- a/server/docs/resources.yml
+++ b/server/docs/resources.yml
@@ -15,14 +15,24 @@
           **Note**: drafts are only available to admin users or with SUDO token.
         schema:
           type: boolean
+      - in: query
+        name: page
+        description: Which page of resources to fetch.
+        schema:
+          type: number
+          minimum: 1
+      - in: query
+        name: perPage
+        description: How many resources to include in each page.
+        schema:
+          type: number
+          minimum: 1
     responses:
       200:
         content:
           application/json:
             schema:
-              type: array
-              items:
-                $ref: "#/components/schemas/EnrichedResource"
+              $ref: "#/components/schemas/PaginatedResources"
       403:
         $ref: "#/components/responses/ForbiddenError"
       500:
