--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -15,3 +15,5 @@ jobs:
     steps:
       - uses: "actions/checkout@v4"
       - run: "./bin/close_stale.sh"
+        env:
+          GH_TOKEN: ${{ github.token }}
