--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -14,6 +14,6 @@ jobs:
     runs-on: "ubuntu-latest"
     steps:
       - uses: "actions/checkout@v4"
-      - run: "./bin/close_stale.sh"
+      - run: "./bin/close-stale.sh"
         env:
           GH_TOKEN: ${{ github.token }}
