--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
 	"editor.codeActionsOnSave": {
 		"source.fixAll.eslint": true
 	},
-	"editor.formatOnSave": false,
+	"editor.formatOnSave": true,
 	"eslint.options": {
 		"ignorePath": ".config/.lintignore",
 		"overrideConfigFile": ".config/.eslintrc.json"
