--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
 	"scripts": {
 		"build": "npm run build:server && npm run build:client",
 		"postbuild": "buildinfo --output dist/static/build-info.txt",
-		"build:client": "webpack --config client/webpack/prod.config.js",
+		"build:client": "vite build ./client",
 		"build:server": "babel server --copy-files --delete-dir-on-start --ignore \"**/*.test.js,**/setupTests.js\" --no-copy-ignored --out-dir dist",
 		"postbuild:server": "del-cli ./dist/static ./dist/**/README.md",
 		"dev": "concurrently --kill-others \"npm:dev:*\"",
-		"dev:client": "webpack serve --config client/webpack/dev.config.js",
+		"dev:client": "vite ./client",
 		"dev:server": "cross-env LOG_LEVEL=debug PORT=4202 nodemon --config .config/nodemon.json --inspect server/server.js",
 		"e2e": "cross-env DOTENV_CONFIG_PATH=e2e/.env concurrently --kill-others --success first --names \"app,e2e\" \"npm:serve\" \"npm:e2e:run\"",
 		"pree2e:run": "wait-on --log --timeout 60000 http-get://localhost:4201",
@@ -64,12 +64,11 @@
 		"@testing-library/user-event": "^14.5.2",
 		"@textbook/build-info": "^1.1.2",
 		"@types/supertest": "^6.0.2",
+		"@vitejs/plugin-react-swc": "^3.5.0",
 		"axe-core": "^4.8.3",
-		"babel-loader": "^9.1.3",
 		"clsx": "^2.1.0",
 		"concurrently": "^8.2.2",
 		"cross-env": "^7.0.3",
-		"css-loader": "^6.10.0",
 		"cypress": "^13.6.4",
 		"cypress-axe": "^1.5.0",
 		"del-cli": "^5.1.0",
@@ -81,10 +80,7 @@
 		"eslint-plugin-react": "^7.33.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-testing-library": "^6.2.0",
-		"file-loader": "^6.2.0",
 		"history": "^5.3.0",
-		"html-webpack-plugin": "^5.6.0",
-		"html-webpack-tags-plugin": "^3.0.2",
 		"husky": "^9.0.10",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
@@ -97,14 +93,9 @@
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.22.0",
 		"sass": "^1.70.0",
-		"sass-loader": "^14.1.0",
-		"style-loader": "^3.3.4",
 		"supertest": "^6.3.4",
+		"vite": "^5.0.11",
 		"wait-on": "^7.2.0",
-		"webpack": "^5.90.1",
-		"webpack-cli": "^5.1.4",
-		"webpack-dev-server": "^4.15.1",
-		"webpack-merge": "^5.10.0",
 		"whatwg-fetch": "^3.6.20"
 	},
 	"dependencies": {
