--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
 		"ship": "npm run lint && npm run test:cover && npm run e2e",
 		"prestart": "node bin/run-migrations.js",
 		"start": "node dist/server.js",
-		"test": "jest --config .config/jest.config.js --runInBand",
-		"test:cover": "npm run test -- --coverage",
-		"test:watch": "npm run test -- --watch",
+		"test": "npm run test:client && npm run test:server",
+		"test:client": "vitest run --config client/vite.config.mjs",
+		"test:cover": "npm run test:client -- --coverage && npm run test:server -- --coverage",
+		"test:server": "jest --config .config/jest.config.js --runInBand",
+		"test:watch": "echo 'watch not supported'",
 		"uuid": "node --print 'require(\"node:crypto\").randomUUID()'"
 	},
 	"lint-staged": {
@@ -65,6 +67,7 @@
 		"@textbook/build-info": "^1.1.2",
 		"@types/supertest": "^6.0.2",
 		"@vitejs/plugin-react-swc": "^3.5.0",
+		"@vitest/coverage-v8": "^1.2.1",
 		"axe-core": "^4.8.3",
 		"clsx": "^2.1.0",
 		"concurrently": "^8.2.2",
@@ -80,10 +83,11 @@
 		"eslint-plugin-react": "^7.33.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-testing-library": "^6.2.0",
+		"eslint-plugin-vitest": "^0.3.20",
 		"history": "^5.3.0",
 		"husky": "^9.0.10",
 		"jest": "^29.7.0",
-		"jest-environment-jsdom": "^29.7.0",
+		"jsdom": "^23.2.0",
 		"lint-staged": "^15.2.2",
 		"msw": "^1.3.2",
 		"nodemon": "^3.0.3",
@@ -94,7 +98,9 @@
 		"react-router-dom": "^6.22.0",
 		"sass": "^1.70.0",
 		"supertest": "^6.3.4",
+		"undici": "^6.4.0",
 		"vite": "^5.0.11",
+		"vitest": "^1.2.1",
 		"wait-on": "^7.2.0",
 		"whatwg-fetch": "^3.6.20"
 	},
