--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -15,6 +15,10 @@
 			"extends": ["plugin:testing-library/react"]
 		}
 	],
+	"parserOptions": {
+		"ecmaVersion": "latest",
+		"sourceType": "module"
+	},
 	"plugins": ["react-hooks"],
 	"rules": {
 		"react/jsx-tag-spacing": "error",
