--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"test": "npm run test:client && npm run test:server",
 		"test:client": "vitest run --config client/vite.config.mjs",
 		"test:cover": "npm run test:client -- --coverage && npm run test:server -- --coverage",
+		"posttest:cover": "nyc report --report-dir reports/coverage --reporter html",
 		"test:server": "jest --config .config/jest.config.js --runInBand",
 		"test:watch": "echo 'watch not supported'",
 		"uuid": "node --print 'require(\"node:crypto\").randomUUID()'"
@@ -65,7 +66,7 @@
 		"@textbook/build-info": "^1.1.2",
 		"@types/supertest": "^6.0.2",
 		"@vitejs/plugin-react-swc": "^3.5.0",
-		"@vitest/coverage-v8": "^1.2.1",
+		"@vitest/coverage-istanbul": "^1.2.1",
 		"axe-core": "^4.8.3",
 		"clsx": "^2.1.0",
 		"concurrently": "^8.2.2",
@@ -89,6 +90,7 @@
 		"lint-staged": "^15.2.2",
 		"msw": "^1.3.2",
 		"nodemon": "^3.0.3",
+		"nyc": "^15.1.0",
 		"prettier": "^3.2.5",
 		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
